--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <script>
+        self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;
+    </script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-functions.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app-check.js"></script>
+
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 
 
 </body>
