--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     -->
 
     <script>
-        self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;
+        self.FIREBASE_APPCHECK_DEBUG_TOKEN = false;
     </script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-functions.js"></script>
