--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> -->
 
   <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -55,7 +55,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <script>
+  <!-- <script>
     self.FIREBASE_APPCHECK_DEBUG_TOKEN = false;
   </script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
@@ -63,7 +63,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app-check.js"></script>
 
   <script src="https://www.google.com/recaptcha/api.js"></script>
-
+ -->
 
 </body>
 
