PROD READY: issue: memory leak somewhere in login

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="NOTES-SIT || RESOC is your one stop destination for notes, lab records and assignments. This website has been created by students of Silicon Institute of Technology, Bhubaneswar for the student community to access academic study material for free." />
