--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="RESOC | NOTES-SIT is your one stop destination for notes, lab records and assignments. This website has been created by students of Silicon Institute of Technology, Bhubaneswar for the student community to access academic study material for free." />
+    content="NOTES-SIT | RESOC is your one stop destination for notes, lab records and assignments. This website has been created by students of Silicon Institute of Technology, Bhubaneswar for the student community to access academic study material for free." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -43,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>RESOC | NOTES-SIT</title>
+  <title>NOTES-SIT | RESOC</title>
 </head>
 
 <body>
